Sistemas Operativos 1/Proyecto 2/Linkerd/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: api-dummy-service
spec:
  selector:
    app: api-dummy
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
