Sistemas Operativos 1/Proyecto 2/Linkerd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lab-service
spec:
  selector:
    app: lab
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
